<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-34dp">

        <EditText
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/prodName"
            android:inputType="textAutoComplete"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/imageurl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.8" />

        <EditText
            android:id="@+id/imageurl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="imageurlAddress"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/imageurl"
            android:inputType="textUri"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.154"
            app:layout_constraintWidth_percent="0.8" />

        <EditText
            android:id="@+id/disc"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_bg"
            android:hint="@string/disc"
            android:inputType="text"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageurl"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_percent="0.8" />

        <EditText
            android:id="@+id/price"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/edit_text_bg"
            android:hint="@string/Price"
            android:inputType="number"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_addProd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.157"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/disc"
            app:layout_constraintWidth_percent="0.5" />

        <EditText
            android:id="@+id/cat_id"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/edit_text_bg"
            android:hint="@string/catId"
            android:inputType="number"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_addProd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.414"
            app:layout_constraintStart_toEndOf="@+id/price"
            app:layout_constraintTop_toBottomOf="@+id/disc"
            app:layout_constraintWidth_percent="0.5" />

        <Button
            android:id="@+id/btn_addProd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:text="@string/addProd"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/disc"
            app:layout_constraintVertical_bias="0.285"
            app:layout_constraintWidth_percent="0.8" />

        <EditText
            android:id="@+id/ev_catName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/edit_text_bg"
            android:hint="@string/CatName"
            android:inputType="textAutoComplete"
            android:paddingStart="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_addCat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_addProd"
            app:layout_constraintWidth_percent="0.8" />

        <Button
            android:id="@+id/btn_addCat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:text="@string/addCat"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ev_catName"
            app:layout_constraintWidth_percent="0.8" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>