<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    tools:context=".user.homepage.menu.ui.MealDetailsFragment">

    <ScrollView
        android:id="@+id/detailsScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/btn_detailsAddToCart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/iv_detailsMealImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/meal_image"
                android:src="@drawable/meal_placeholder"
                android:elevation="10dp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_detailsMealName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingTop="20dp"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/iv_detailsMealImg"
                tools:text="@string/loading" />

            <TextView
                android:id="@+id/tv_detailsMealPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingTop="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/cv_quantity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_detailsMealName"
                tools:text="999 LE" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/orange"
                android:gravity="end"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toTopOf="@+id/tv_detailsMealDesc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_detailsMealPrice"
                app:layout_constraintTop_toBottomOf="@id/tv_detailsMealName">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btn_detailsQuantityRemove"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/orange"
                        android:src="@drawable/remove_icon"
                        android:contentDescription="@string/less" />

                    <TextView
                        android:id="@+id/tv_detailsMealQuantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="1"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="HardcodedText" />

                    <ImageButton
                        android:id="@+id/btn_detailsQuantityAdd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/orange"
                        android:src="@drawable/add_icon"
                        android:contentDescription="@string/more" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/tv_detailsMealDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingTop="30dp"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/tv_detailsMealPrice"
                tools:text="@string/loading" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

    <TextView
        android:id="@+id/tv_detailsTotalWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="8dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/total"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_detailsMealTotalPrice"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_detailsMealTotalPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_detailsAddToCart"
        app:layout_constraintStart_toEndOf="@id/tv_detailsTotalWord"
        tools:text="999" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_detailsAddToCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/add_to_cart"
        android:src="@drawable/shopping_cart_icon_outlined"
        android:text="@string/add_to_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_detailsMealTotalPrice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailsScrollView" />

</androidx.constraintlayout.widget.ConstraintLayout>